--- a/i18n/cs-CZ.json
+++ b/i18n/cs-CZ.json
@@ -97,9 +97,9 @@
 	"config-rest-restOnBlur-desc": "Změní status pokud je atom na liště.",
 	"config-rest-restOnAfk": "Odpočívat po odchodu (AFK)",
 	"config-rest-restOnAfk-desc": "Změní status pokud chvíli nepoužíváte klávesnici nebo myš. (Vyžaduje restart atomu)",
-	"config-rest-restOnAfkThreshold": "AFK Threshold",
-	"config-rest-restOnAfkThreshold-desc": "If you turned on 'Rest On AFK', no interactions more than this time(seconds) will set your status as 'rest'.",
-	"config-rest-smallImage": "Small Image",
+	"config-rest-restOnAfkThreshold": "AFK",
+	"config-rest-restOnAfkThreshold-desc": "Pokud jste zapli 'Odpočívat při AFK ', žádné interakce s aplikací déle jak (sekund) změní status na  'odpočívá'.",
+	"config-rest-smallImage": "Malý obrázek",
 	"config-rest-smallImage-desc": "Change the small image icon",
 	"config-rest-smallImageCustom": "Small Image Custom Key",
 	"config-rest-smallImageCustom-desc": "Set this to the custom key if you selected 'Custom' on Small Image",
