--- a/i18n/cs-CZ.json
+++ b/i18n/cs-CZ.json
@@ -100,6 +100,117 @@
 	"config-rest-restOnAfkThreshold": "AFK",
 	"config-rest-restOnAfkThreshold-desc": "Pokud jste zapli 'Odpočívat při AFK ', žádné interakce s aplikací déle jak (sekund) změní status na  'odpočívá'.",
 	"config-rest-smallImage": "Malý obrázek",
+	"config-rest-smallImage-desc": "Změní malý obráze",
+	"config-rest-smallImageCustom": "Klíč malého obrázku",
+	"config-rest-smallImageCustom-desc": "Zde vložte klíč pokud jste vybral/a 'Vlastní' v Malém obrázku",
+	"config-rest-largeImage": "Velký obrázek",
+	"config-rest-largeImage-desc": "Změní velký obrázek",
+	"config-rest-largeImageCustom": "Klíč velkého obrázku",
+	"config-rest-largeImageCustom-desc": "SZde vložte klíč pokud jste vybral/a 'Vlastní' ve Velkém obrázku",
+	"config-rest-typeName": "Název Typu",
+	"config-rest-typeName-desc": "Toto se zobrazí místo typu soubru.",
+	"config-rest-typeNameCustom": "{
+	"working-project": "Pracuje na %projectName%",
+	"working-no-project": "Pracuje na projektu",
+	"editing-file": "Edituje %fileName%",
+	"editing-idle": "Odpočívá",
+	"atom-description": "Pracuje v Atomu",
+	"type-description": "Edituje %type% dokument",
+	"type-unknown": "Edituje dokument",
+	"developer-idle": "Tento vývojář dokáže i ODPOČÍVAT!",
+
+	"generate-failed": "Nemohu vygenerotav %file% v configu.",
+	"generate-failed-desc": "Prři generaci %file% nastal error.",
+	"read-failed": "Nemohu přečíst %file% v configu.",
+	"read-failed-desc": "Při čtení %file% nastal error.",
+	"write-failed": "Nemohu přepsat %file% v configu.",
+	"write-failed-desc": "Při přepisování %file% nastal error.",
+
+	"error-is-file": "Nemohu otevřít složku atom-discord.",
+	"error-is-file-desc": "atom-discord není složka, ale dokument!",
+	"error-is-file-detail": "Prosím zkontroluj %directory%.",
+	"error-is-directory": "Nemohu otevřít %file% v configu.",
+	"error-is-directory-desc": "%file% není dokument, ale adresář!",
+	"error-is-directory-detail": "Prosím zkontroluj %directory%.",
+	"error-no-discord": "Discord není spuštěn!",
+	"error-no-discord-desc": "Pokud není zaplý Discord a nerestaruješ atom, rich presence se nebude ukazovat.",
+	"error-no-discord-detail": "Toto oznámení můžete potlačit v nastavení.",
+	"error-while-require": "Nastal error při posílání kódu do Discordu! :(",
+	"error-while-require-desc": "Rich presence se nebude ukazovat. Prosím nahrajte tento problém na stracktrase.",
+
+	"not-in-project": "Žádný projekt není otevřený!",
+
+	"custom-name": "Jméno projektu",
+	"custom-name-primary": "OK",
+	"custom-name-secondary": "USE VÝCHOZÍ",
+
+	"config-image": "Obrázek",
+	"config-image-desc": "Změnit obrázek",
+	"config-imageCustom": "Vlastní obrázek",
+	"config-imageCustom-desc": "Nastavte toto na vlastní klíč pokud jste vybral/a 'Vlastní' v Obrázku",
+	"config-image-disabled": "Žádný obrázek",
+	"config-image-currentType": "Typ dokumentu",
+	"config-image-customImage": "Vlastní",
+	"config-image-atom-original": "Originální Atom Ikona",
+	"config-image-atom": "Alternativní Atom Ikona 1 (Monotone)",
+	"config-image-atom-2": "Alternativní Atom Ikona 1 (Gradient)",
+	"config-image-atom-3": "Alternativní Atom Ikona 1 (Polyhedron)",
+	"config-image-atom-5": "Alternativní Atom Ikona 1 (Dark, Rhombus)",
+	"config-image-text": "Textová Ikona",
+	"config-image-rest": "Odpočívací Ikona",
+	"config-image-default": "Výchozí",
+
+	"config-text": "Text",
+	"config-text-desc": "Změnit Text",
+	"config-textCustom": "Vlastní Text",
+	"config-textCustom-desc": "Set this to the custom text if you selected 'Custom' on Text. %projectName%, %fileName%, %type% is supported.",
+	"config-text-disabled": "Žádný text",
+	"config-text-custom": "Vlastní",
+
+	"config-behaviour": "Behaviour",
+	"config-behaviour-updateTick": "Update tick",
+	"config-behaviour-updateTick-desc": "Interval between state update (ms)",
+	"config-behaviour-customAppId": "Custom Client ID",
+	"config-behaviour-customAppId-desc": "Use custom app to change icon, app names. WARNING: changing this may result in Rich Presence malfunction",
+
+	"config-smallImage": "Small Image",
+	"config-smallImage-desc": "Change content of small image on Rich Presence",
+
+	"config-largeImage": "Large Image",
+	"config-smallImage-desc": "Change content of large image on Rich Presence",
+
+	"config-state": "State",
+	"config-state-desc": "Change content of primary text on Rich Presence",
+
+	"config-detail": "Detail",
+	"config-detail-desc": "Change content of secondary text on Rich Presence",
+
+	"config-elapsed": "Elapsed Time",
+	"config-elapsed-desc": "Change content of elapsed time on Rich Presence",
+	"config-elapsed-send": "Send Elapsed Time",
+	"config-elapsed-send-desc": "Tick this if you want to show elapsed time.",
+	"config-elapsed-handleRest": "Elapsed time when Rest",
+	"config-elapsed-handleRest-desc": "Change behavior when you're resting",
+	"config-elapsed-handleRest-disabled": "Default",
+	"config-elapsed-handleRest-disabled-desc": "Elapsed time increases even if you're resting",
+	"config-elapsed-handleRest-reset": "Reset",
+	"config-elapsed-handleRest-reset-desc": "Reset elapsed time when you're resting",
+	"config-elapsed-handleRest-resetAfterDelay": "Reset After Delay",
+	"config-elapsed-handleRest-resetAfterDelay-desc": "Reset elapsed time when you're resting for a while.",
+	"config-elapsed-handleRest-pause": "Pause",
+	"config-elapsed-handleRest-pause-desc": "Pause elapsed time increasing while you're resting",
+	"config-elapsed-handleRestDelay": "Delay for 'Reset After Delay'",
+	"config-elapsed-handleRestDelay-desc": "If you selected 'Reset After Delay', resting more than this time(seconds) will reset the elapsed time.",
+
+	"config-rest": "Rest",
+	"config-rest-description": "Change behaviour while you're resting",
+	"config-rest-restOnBlur": "Rest on focus out",
+	"config-rest-restOnBlur-desc": "Change status to rest if atom is not focused.",
+	"config-rest-restOnAfk": "Rest on AFK (Away-From-Keyboard)",
+	"config-rest-restOnAfk-desc": "Change status to rest if there's no mouse or keyboard action for a while. (Needs restart atom)",
+	"config-rest-restOnAfkThreshold": "AFK Threshold",
+	"config-rest-restOnAfkThreshold-desc": "If you turned on 'Rest On AFK', no interactions more than this time(seconds) will set your status as 'rest'.",
+	"config-rest-smallImage": "Small Image",
 	"config-rest-smallImage-desc": "Change the small image icon",
 	"config-rest-smallImageCustom": "Small Image Custom Key",
 	"config-rest-smallImageCustom-desc": "Set this to the custom key if you selected 'Custom' on Small Image",
@@ -109,7 +220,22 @@
 	"config-rest-largeImageCustom-desc": "Set this to the custom key if you selected 'Custom' on Large Image",
 	"config-rest-typeName": "Type Name",
 	"config-rest-typeName-desc": "This will be shown instead of the type.",
-	"config-rest-typeNameCustom": "Type Name Custom",
+	"config-rest-typeNameCustom": "Vlastní typ souboru",
+	"config-rest-typeNameCustom-desc": "Ude vložte vlastní text pokud jste vybral/a 'Vlastní' v Typu. %projectName% je podporován.",
+	"config-rest-fileName": "Název souboru",
+	"config-rest-fileName-desc": "Toto se zobrazí místo názvu souboru.",
+	"config-rest-fileNameCustom": "Vlastní název souboru",
+	"config-rest-fileNameCustom-desc": "Zde vložte vlastní text pokud jste vybral/a 'Vlastní' v Názvu souboru. %projectName%je podporován.",
+
+	"config-troubleshooting": "Trouble Shooting",
+	"config-troubleshooting-desc": "Options to handle discord integration troubles",
+	"config-troubleshooting-ubuntuPatch": "Patch Ubuntu 18.04 Bug",
+	"config-troubleshooting-ubuntuPatch-desc": "Patch Discord Rich Presence not showing on Ubuntu 18.04. Tick this when you installed discord from Ubuntu Software",
+	"config-troubleshooting-debugLog": "Debug Mód",
+	"config-troubleshooting-debugLog-desc": "Log debugging messages in atom-discord directory",
+	"config-troubleshooting-noDiscordNotification": "No Discord Notification",
+	"config-troubleshooting-noDiscordNotification-desc": "Show warning notification when discord is turned off or connection wasn't established"
+",
 	"config-rest-typeNameCustom-desc": "Set this to the custom text if you selected 'Custom' on Type Name. %projectName% is supported.",
 	"config-rest-fileName": "File Name",
 	"config-rest-fileName-desc": "This will be shown instead of the filename.",
