--- a/i18n/es-ES.json
+++ b/i18n/es-ES.json
@@ -6,5 +6,5 @@
 	"atom-description": "Trabajando con Atom",
 	"type-description": "Editando un archivo de tipo %type%",
 	"type-unknown": "Editando un archivo",
-	"developer-idle": "El desarrollador es suficientemente descansado para descansar!"
+	"developer-idle": "El desarrollador está lo suficientemente descansado para descansar!"
 }
