Updated blur threshold

--- a/i18n/en-US.json
+++ b/i18n/en-US.json
@@ -94,7 +94,9 @@
 	"config-rest": "Rest",
 	"config-rest-description": "Change behaviour while you're resting",
 	"config-rest-restOnBlur": "Rest on focus out",
-	"config-rest-restOnBlur-desc": "Change status to rest if atom is not focused.",
+	"config-rest-restOnBlur-desc": "Change status to rest if atom is not focused for a while.",
+	"config-rest-restOnBlurThreshold": "Rest on focus out Threshold",
+	"config-rest-restOnBlurThreshold-desc": "If atom is unfocused longer than this time(seconds), your status will be set to rest. (0: Immediately)",
 	"config-rest-restOnAfk": "Rest on AFK (Away-From-Keyboard)",
 	"config-rest-restOnAfk-desc": "Change status to rest if there's no mouse or keyboard action for a while. (Needs restart atom)",
 	"config-rest-restOnAfkThreshold": "AFK Threshold",
