Fixed #81, Added rest options, updated Korean translation

--- a/i18n/ko-KR.json
+++ b/i18n/ko-KR.json
@@ -33,37 +33,108 @@
 	"custom-name-primary": "확인",
 	"custom-name-secondary": "기본값 사용",
 
+	"config-image": "이미지",
+	"config-image-desc": "이미지 변경",
+	"config-imageCustom": "커스텀 이미지",
+	"config-imageCustom-desc": "이미지에서 '커스텀'을 선택했다면 이 값을 이미지의 커스텀 키로 설정하세요.",
+	"config-image-disabled": "이미지 없음",
+	"config-image-currentType": "파일 형식 아이콘",
+	"config-image-customImage": "커스텀",
+	"config-image-atom-original": "기본 아톰 아이콘",
+	"config-image-atom": "아톰 대체 아이콘 1 (단색)",
+	"config-image-atom-2": "아톰 대체 아이콘 2 (그래디언트)",
+	"config-image-atom-3": "아톰 대체 아이콘 3 (다면체)",
+	"config-image-atom-5": "아톰 대체 아이콘 4 (어두운 마름모)",
+	"config-image-text": "문서 아이콘",
+	"config-image-rest": "휴식 아이콘",
+	"config-image-default": "기본값",
+
+
+	"config-text": "텍스트",
+	"config-text-desc": "텍스트 변경",
+	"config-textCustom": "커스텀 텍스트",
+	"config-textCustom-desc": "텍스트에서 '커스텀'을 선택했다면 이 값을 커스텀 텍스트로 설정하세요. %projectName%, %fileName%, %type% 이 지원됩니다.",
+	"config-text-disabled": "텍스트 없음",
+	"config-text-custom": "커스텀",
+
+
 	"config-behaviour": "동작 설정",
-	"config-behaviour-sendSmallImage": "작은 아톰 로고 이미지 표시",
-	"config-behaviour-sendLargeImage": "큰 파일 형식 이미지 표시",
-	"config-behaviour-preferType": "설명에 파일 형식 표시",
-	"config-behaviour-preferType-desc": "설명으로 파일의 이름 대신에 파일의 형식을 표시합니다.",
-	"config-behaviour-showFilenameOnLargeImage": "큰 이미지에 파일명 표시",
-	"config-behaviour-showFilenameOnLargeImage-desc": "큰 이미지에 파일의 형식 대신에 파일의 이름을 표시합니다.",
 	"config-behaviour-updateTick": "업데이트 주기",
 	"config-behaviour-updateTick-desc": "상태 업데이트 간의 간격 (ms)",
-	"config-behaviour-alternativeIcon": "아톰 아이콘",
-	"config-behaviour-alternativeIcon-desc": "작은 아톰 로고 선택",
-	"config-behaviour-alternativeIcon-atom-original": "기본 아톰 로고",
-	"config-behaviour-alternativeIcon-atom": "아톰 대체 로고 1 (단색)",
-	"config-behaviour-alternativeIcon-atom-2": "아톰 대체 로고 2 (그래디언트)",
-	"config-behaviour-alternativeIcon-atom-3": "아톰 대체 로고 3 (다면체)",
-	"config-behaviour-alternativeIcon-atom-5": "아톰 대체 로고 4 (어두운 마름모)",
-	"config-behaviour-useRestIcon": "휴식 아이콘 사용",
-	"config-behaviour-useRestIcon-desc": "아무것도 하고 있지 않을 때 휴식 아이콘을 표시합니다.",
 	"config-behaviour-customAppId": "커스텀 클라이언트 ID",
 	"config-behaviour-customAppId-desc": "커스텀 앱을 통해 앱 이름과 아이콘셋을 변경합니다. 주의사항: 이 값을 변경할 경우 Rich Presence가 잘 동작하지 않을 수 있습니다.",
 
-	"config-privacy": "개인정보",
-	"config-privacy-desc": "연동할 항목들을 선택합니다.",
-	"config-privacy-sendFilename": "파일명 표시",
-	"config-privacy-sendFilename-desc": "파일명을 연동합니다.",
-	"config-privacy-sendProject": "프로젝트명 표시",
-	"config-privacy-sendProject-desc": "프로젝트명을 연동합니다.",
-	"config-privacy-sendFileType": "파일 형식 표시",
-	"config-privacy-sendFileType-desc": "파일 형식을 연동합니다.",
-	"config-privacy-sendElapsed": "지난 시간 표시",
-	"config-privacy-sendElapsed-desc": "코딩을 시작한 때로부터 지난 시간을 표시합니다.",
+
+	"config-smallImage": "작은 이미지",
+	"config-smallImage-desc": "Rich Presence의 작은 이미지에 무엇을 표시할지 결정합니다.",
+
+
+	"config-largeImage": "큰 이미지",
+	"config-largeImage-desc": "Rich Presence의 큰 이미지에 무엇을 표시할지 결정합니다.",
+
+
+	"config-state": "상태",
+	"config-state-desc": "Rich Presence의 두번째 텍스트를 변경합니다.",
+
+
+	"config-detail": "세부사항",
+	"config-detail-desc": "Rich Presence의 첫번째 텍스트를 변경합니다.",
+
+
+	"config-elapsed": "지난 시간",
+	"config-elapsed-desc": "Rich Presence의 편집 중인 시간을 어떻게 표시할지 결정합니다.",
+	"config-elapsed-send": "지난 시간 표시",
+	"config-elapsed-send-desc": "코딩을 시작한 때로부터 지난 시간을 표시합니다.",
+	"config-elapsed-handleRest": "휴식 중 지난 시간",
+	"config-elapsed-handleRest-desc": "코딩을 하지 않고 있을 때 지난 시간을 어떻게 측정할지 결정합니다.",
+	"config-elapsed-handleRest-disabled": "기본",
+	"config-elapsed-handleRest-disabled-desc": "휴식을 취하고 있을 때에도 시간이 지나갑니다.",
+	"config-elapsed-handleRest-reset": "초기화",
+	"config-elapsed-handleRest-reset-desc": "휴식을 취하면 지난 시간을 초기화합니다.",
+	"config-elapsed-handleRest-resetAfterDelay": "일정 시간 후 초기화",
+	"config-elapsed-handleRest-resetAfterDelay-desc": "일정 시간 이상 휴식하면 지난 시간을 초기화합니다.",
+	"config-elapsed-handleRest-pause": "멈춤",
+	"config-elapsed-handleRest-pause-desc": "쉬고 있을 때 시간 측정을 일시정지합니다.",
+	"config-elapsed-handleRestDelay": "'일정 시간 후 초기화'의 일정 시간",
+	"config-elapsed-handleRestDelay-desc": "'일정 시간 후 초기화'를 선택한 경우, 이 시간(초)보다 오래 쉰다면 타이머가 초기화될 것입니다.",
+
+
+	"config-rest": "휴식",
+	"config-rest-description": "휴식 중에 취할 행동을 변경합니다.",
+	"config-rest-restOnBlur": "포커스를 잃을 시 휴식",
+	"config-rest-restOnBlur-desc": "Atom이 포커스를 잃으면 상태를 휴식으로 변경합니다.",
+	"config-rest-restOnAfk": "AFK (Away-From-Keyboard)시 휴식으로 상태 전환",
+	"config-rest-restOnAfk-desc": "키보드나 마우스를 일정 시간 동안 사용하지 않을시 상태를 휴식으로 변경합니다. (Atom 재시작 필요)",
+	"config-rest-restOnAfkThreshold": "AFK 설정 시간",
+	"config-rest-restOnAfkThreshold-desc": "'AFK시 휴식으로 상태 전환'을 설정했을 시, 이 시간(초)보다 오래 움직임이 없다면 상태를 휴식으로 변경할 것입니다.",
+
+	"config-rest-smallImage": "작은 이미지",
+	"config-rest-smallImage-desc": "작은 이미지를 변경합니다.",
+	"config-rest-smallImageCustom": "작은 이미지 커스텀",
+	"config-imageCustom-desc": "작은 이미지에서 '커스텀'을 선택했다면 이 값을 이미지의 커스텀 키로 설정하세요.",
+	"config-rest-smallImageText": "작은 이미지 텍스트",
+	"config-rest-smallImageText-desc": "휴식 시 이 값이 작은 이미지 텍스트 대신 나올 것입니다.",
+	"config-rest-smallImageTextCustom": "작은 이미지 텍스트 커스텀",
+	"config-rest-smallImageTextCustom-desc": "작은 이미지 텍스트에서 '커스텀'을 선택했다면 이 값을 커스텀 텍스트로 설정하세요. %projectName% 이 지원됩니다.",
+
+	"config-rest-largeImage": "큰 이미지",
+	"config-rest-largeImage-desc": "큰 이미지를 변경합니다.",
+	"config-rest-largeImageCustom": "큰 이미지 커스텀",
+	"config-rest-largeImageCustom-desc": "큰 이미지에서 '커스텀'을 선택했다면 이 값을 이미지의 커스텀 키로 설정하세요.",
+	"config-rest-typeName": "큰 이미지 텍스트",
+	"config-rest-typeName-desc": "휴식 시 이 값이 큰 이미지 텍스트 대신 나올 것입니다.",
+	"config-rest-typeNameCustom": "큰 이미지 텍스트 커스텀",
+	"config-rest-typeNameCustom-desc": "큰 이미지 텍스트에서 '커스텀'을 선택했다면 이 값을 커스텀 텍스트로 설정하세요. %projectName% 이 지원됩니다.",
+
+	"config-rest-fileName": "상태",
+	"config-rest-fileName-desc": "휴식 시 이 값이 상태 대신 나올 것입니다.",
+	"config-rest-fileNameCustom": "상태 커스텀",
+	"config-rest-fileNameCustom-desc": "상태에서 '커스텀'을 선택했다면 이 값을 커스텀 텍스트로 설정하세요. %projectName% 이 지원됩니다.",
+
+	"config-rest-detail": "세부사항",
+	"config-rest-detail-desc": "휴식 시 이 값이 세부사항 대신 나올 것입니다.",
+	"config-rest-detailCustom": "세부사항 커스텀",
+	"config-rest-detailCustom-desc": "세부사항에서 '커스텀'을 선택했다면 이 값을 커스텀 텍스트로 설정하세요. %projectName% 이 지원됩니다.",
 
 	"config-troubleshooting": "문제 해결",
 	"config-troubleshooting-desc": "디스코드 연동 문제를 해결하기 위한 옵션입니다.",
