--- a/i18n/fr-FR.json
+++ b/i18n/fr-FR.json
@@ -6,5 +6,5 @@
 	"atom-description": "Travaille avec Atom",
 	"type-description": "Modifie un fichier %type%",
 	"type-unknown": "Modifie un fichier",
-	"developer-idle": "Un développeur, ça a besoin de REPOs !"
+	"developer-idle": "Un développeur, ça a besoin de REPOS !"
 }
