--- a/i18n/index.json
+++ b/i18n/index.json
@@ -70,6 +70,11 @@
 	},
 
 	{
+		"value": "th-TH",
+		"description": "Thai (Thailand)"
+	},
+
+	{
 		"value": "zh-CN",
 		"description": "Chinese (China)"
 	}
