error gramatica GRAVE!!!
Soy español y la frase "Está lo suficientemente DESCANSADO para descansar" Está mal. El correcto es "...CASADO para descansar"

--- a/i18n/es-ES.json
+++ b/i18n/es-ES.json
@@ -6,5 +6,5 @@
 	"atom-description": "Trabajando con Atom",
 	"type-description": "Editando un archivo de tipo %type%",
 	"type-unknown": "Editando un archivo",
-	"developer-idle": "El desarrollador está lo suficientemente descansado para descansar!"
+	"developer-idle": "¡El desarrollador está lo suficientemente cansado para descansar!"
 }
