--- a/i18n/ru-RU.json
+++ b/i18n/ru-RU.json
@@ -2,7 +2,7 @@
 	"working-project": "Работает над %projectName%",
 	"working-no-project": "Работает над некоторыми вещами",
 	"editing-file": "Редактирует %fileName%",
-	"editing-idle": "Отошел",
+	"editing-idle": "Отошёл",
 	"atom-description": "Работает в Atom",
 	"type-description": "Редактирует файл %type%",
 	"type-unknown": "Редактирует файл",
